tests/miniJava/neg/006734_mutation.MiniJava
class java { public void static void Main ( String [ ] java ) { { } } }
